--- a/index.html
+++ b/index.html
@@ -1,1 +1,220 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dupe4Lifes - Join Discord</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #6e8efb, #a777e3);
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden; /* Prevent scrolling on body */
+        }
 
+        .container {
+            text-align: center;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            max-width: 80%;
+            overflow-y: auto; /* Enable vertical scrolling */
+            max-height: 80vh; /* Limit height for scrolling */
+            position: relative; /* Position for absolute elements */
+        }
+
+        h1 {
+            color: white;
+            font-size: 3em;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            color: #f0f0f0;
+            font-size: 1.5em;
+            margin-bottom: 20px;
+        }
+
+        p {
+            color: white;
+            font-size: 1.2em;
+            margin-bottom: 40px;
+        }
+
+        #copyButton {
+            padding: 15px 50px;
+            font-size: 18px;
+            cursor: pointer;
+            background-color: #ffffff;
+            color: #000000;
+            border: 2px solid #000000;
+            border-radius: 30px; /* More rounded edges */
+            transition: background-color 0.3s, color 0.3s, border-color 0.3s, transform 0.3s;
+            margin-bottom: 20px;
+            display: inline-block;
+            outline: none; /* Remove default focus outline */
+        }
+
+        #copyButton:hover {
+            background-color: #000000;
+            color: #ffffff;
+            border-color: #000000;
+            transform: scale(1.05);
+        }
+
+        #copyButton:active {
+            transform: scale(0.95);
+        }
+
+        .discord-button {
+            margin-top: 20px;
+            border-radius: 50%;
+            overflow: hidden;
+            cursor: pointer;
+            transition: transform 0.3s, opacity 0.3s;
+            max-width: 150px;
+            margin: auto; /* Center horizontally */
+        }
+
+        .discord-button:hover {
+            transform: scale(1.1);
+        }
+
+        .discord-button img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        /* Hamburger Menu Styles */
+        .menu-toggle {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            cursor: pointer;
+            z-index: 1000; /* Ensure it's above other content */
+            opacity: 0.9; /* Increased opacity */
+        }
+
+        .hamburger {
+            width: 25px;
+            height: 3px;
+            background-color: #fff;
+            margin: 5px 0;
+            transition: transform 0.3s, opacity 0.3s;
+            position: relative;
+        }
+
+        .hamburger:before, .hamburger:after {
+            content: '';
+            position: absolute;
+            width: 25px;
+            height: 3px;
+            background-color: #fff;
+            transition: transform 0.3s, opacity 0.3s;
+        }
+
+        .hamburger:before {
+            top: -8px;
+        }
+
+        .hamburger:after {
+            bottom: -8px;
+        }
+
+        .menu {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 10px 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            max-width: 200px;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s ease-in-out;
+            z-index: 999; /* Ensure it's above other content */
+        }
+
+        .menu ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .menu li {
+            margin-bottom: 10px;
+        }
+
+        .menu a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 1.2em;
+            transition: color 0.3s;
+        }
+
+        .menu a:hover {
+            color: #ccc;
+        }
+
+        .menu.open {
+            opacity: 1;
+            pointer-events: auto;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <div class="hamburger"></div>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="https://discord.gg/x4SEj3dGk3" target="_blank">Join Discord</a></li>
+                <li><a href="https://dupe4lifes.org/RanksStore" target="_blank">Ranks Store</a></li>
+            </ul>
+        </div>
+        <h1>Welcome to Dupe4Lifes</h1>
+        <h2>The #1 Lifesteal Dupe Server</h2>
+        <p>Click the button below to copy the server IP and join our Discord server!</p>
+        <button id="copyButton" onclick="copyToClipboard()">Copy IP</button>
+        <div class="discord-button">
+            <a href="https://discord.gg/x4SEj3dGk3" target="_blank">
+                <img src="https://i.ibb.co/dK80H8g/discord-button.png" alt="Join Discord">
+            </a>
+        </div>
+    </div>
+
+    <script>
+        function copyToClipboard() {
+            const textToCopy = 'Dupe4Lifes.org';
+            navigator.clipboard.writeText(textToCopy).then(() => {
+                const button = document.getElementById('copyButton');
+                const originalText = button.textContent;
+                button.textContent = 'Copied!';
+                setTimeout(() => {
+                    button.textContent = originalText;
+                }, 2000);
+            }).catch(err => {
+                console.error('Failed to copy text: ', err);
+            });
+        }
+
+        function toggleMenu() {
+            const menu = document.querySelector('.menu');
+            menu.classList.toggle('open');
+            
+            const toggleIcon = document.querySelector('.hamburger');
+            toggleIcon.classList.toggle('open');
+        }
+    </script>
+</body>
+</html>
