--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
             <ul>
                 <li><a href="https://discord.gg/x4SEj3dGk3" target="_blank">Join Discord</a></li>
                 <li><a href="https://dupe4lifes.org/RanksStore" target="_blank">Ranks Store</a></li>
+                <li><a href="https://www.dupe4lifes.org/about" target="_blank">About Us</a></li>
             </ul>
         </div>
         <h1>Welcome to Dupe4Lifes</h1>
